minor code warnings fixed